fix(cron): fix async race in reEnrichOsm, improve tests and toString
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>